--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorTheme": "One Dark Pro",
   "workbench.startupEditor": "none",
-  "editor.fontFamily": "Monaco, Inconsolata, Consolas, 'Courier New', Courier",
+  "editor.fontFamily": "Inconsolata, Consolas, 'Courier New', Courier",
   "editor.lineHeight": 20,
   "editor.renderWhitespace": "boundary",
   "editor.multiCursorModifier": "alt",
@@ -19,7 +19,6 @@
     "*.spec.ts.snap": "javascript",
     "*.tpl": "php"
   },
-  "terminal.integrated.fontSize": 12,
   "terminal.integrated.cursorStyle": "line",
   "terminal.integrated.confirmOnExit": true,
   "telemetry.enableTelemetry": false,
@@ -35,6 +34,8 @@
   "terminal.integrated.rendererType": "canvas",
   "terminal.integrated.shell.osx": "/usr/local/bin/fish",
   "terminal.integrated.shell.linux": "fish",
+  "terminal.integrated.shell.windows": "C:\\Windows\\System32\\bash.exe",
+  "terminal.integrated.automationShell.windows": "C:\\Windows\\System32\\cmd.exe",
   "workbench.activityBar.visible": true,
   "markdown.preview.scrollEditorWithPreview": false,
   "editor.minimap.enabled": false,
@@ -51,7 +52,7 @@
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "diffEditor.renderSideBySide": true,
+  "diffEditor.renderSideBySide": false,
   "editor.cursorSurroundingLines": 5,
   "scm.defaultViewMode": "tree",
   "[typescriptreact]": {
@@ -60,21 +61,70 @@
   "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "sqltools.connections": [
-    {
-      "database": "lisaange_newwebsite",
-      "dialect": "MySQL",
-      "name": "Tomdev",
-      "password": "we-pE3WFx",
-      "port": 3306,
-      "server": "localhost",
-      "username": "tomdb"
-    }
-  ],
-  "crystal-lang.completion": true,
-  "crystal-lang.hover": true,
-  "crystal-lang.implementations": true,
   "importCost.bundleSizeDecoration": "gzipped",
   "importCost.mediumPackageColor": "#788ca1",
-  "importCost.smallPackageColor": "#6a737d"
+  "importCost.smallPackageColor": "#6a737d",
+  "editor.formatOnSave": true,
+  "editor.snippetSuggestions": "bottom",
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "extensions.ignoreRecommendations": false,
+  "workbench.sideBar.location": "left",
+  "liveshare.featureSet": "insiders",
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "peacock.favoriteColors": [
+    {
+      "name": "Angular Red",
+      "value": "#b52e31"
+    },
+    {
+      "name": "Auth0 Orange",
+      "value": "#eb5424"
+    },
+    {
+      "name": "Azure Blue",
+      "value": "#007fff"
+    },
+    {
+      "name": "C# Purple",
+      "value": "#68217A"
+    },
+    {
+      "name": "Gatsby Purple",
+      "value": "#639"
+    },
+    {
+      "name": "Go Cyan",
+      "value": "#5dc9e2"
+    },
+    {
+      "name": "Java Blue-Gray",
+      "value": "#557c9b"
+    },
+    {
+      "name": "JavaScript Yellow",
+      "value": "#f9e64f"
+    },
+    {
+      "name": "Mandalorian Blue",
+      "value": "#1857a4"
+    },
+    {
+      "name": "Node Green",
+      "value": "#215732"
+    },
+    {
+      "name": "React Blue",
+      "value": "#00b3e6"
+    },
+    {
+      "name": "Something Different",
+      "value": "#832561"
+    },
+    {
+      "name": "Vue Green",
+      "value": "#42b883"
+    }
+  ]
 }
