--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "One Dark Pro",
+  "workbench.colorTheme": "Atom One Light",
   "workbench.startupEditor": "none",
   "editor.fontFamily": "Inconsolata, Consolas, 'Courier New', Courier",
   "editor.lineHeight": 20,
@@ -7,7 +7,6 @@
   "editor.multiCursorModifier": "alt",
   "editor.wordWrap": "on",
   "editor.cursorBlinking": "blink",
-  "editor.tabSize": 2,
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
@@ -34,8 +33,8 @@
   "terminal.integrated.rendererType": "canvas",
   "terminal.integrated.shell.osx": "/usr/local/bin/fish",
   "terminal.integrated.shell.linux": "fish",
-  "terminal.integrated.shell.windows": "C:\\Windows\\System32\\bash.exe",
-  "terminal.integrated.automationShell.windows": "C:\\Windows\\System32\\cmd.exe",
+  "terminal.integrated.shell.windows": "C:\\Program Files\\PowerShell\\7-preview\\pwsh.exe",
+  "terminal.integrated.automationShell.windows": "C:\\Program Files\\PowerShell\\7-preview\\pwsh.exe",
   "workbench.activityBar.visible": true,
   "markdown.preview.scrollEditorWithPreview": false,
   "editor.minimap.enabled": false,
@@ -48,11 +47,10 @@
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
-  "prettier.requireConfig": true,
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "diffEditor.renderSideBySide": false,
+  "diffEditor.renderSideBySide": true,
   "editor.cursorSurroundingLines": 5,
   "scm.defaultViewMode": "tree",
   "[typescriptreact]": {
@@ -64,7 +62,6 @@
   "importCost.bundleSizeDecoration": "gzipped",
   "importCost.mediumPackageColor": "#788ca1",
   "importCost.smallPackageColor": "#6a737d",
-  "editor.formatOnSave": true,
   "editor.snippetSuggestions": "bottom",
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -126,5 +123,6 @@
       "name": "Vue Green",
       "value": "#42b883"
     }
-  ]
+  ],
+  "prettier.requireConfig": true
 }
