--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,4 @@
 {
-  "workbench.colorTheme": "Atom One Light",
   "workbench.startupEditor": "none",
   "editor.fontFamily": "Inconsolata, Consolas, 'Courier New', Courier",
   "editor.lineHeight": 20,
@@ -21,7 +20,7 @@
   "terminal.integrated.cursorStyle": "line",
   "terminal.integrated.confirmOnExit": true,
   "telemetry.enableTelemetry": false,
-  "diffEditor.ignoreTrimWhitespace": true,
+  "diffEditor.ignoreTrimWhitespace": false,
   "debug.allowBreakpointsEverywhere": true,
   "window.titleBarStyle": "custom",
   "breadcrumbs.enabled": true,
@@ -50,7 +49,7 @@
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "diffEditor.renderSideBySide": true,
+  "diffEditor.renderSideBySide": false,
   "editor.cursorSurroundingLines": 5,
   "scm.defaultViewMode": "tree",
   "[typescriptreact]": {
@@ -70,59 +69,16 @@
   "workbench.sideBar.location": "left",
   "liveshare.featureSet": "insiders",
   "typescript.updateImportsOnFileMove.enabled": "always",
-  "peacock.favoriteColors": [
-    {
-      "name": "Angular Red",
-      "value": "#b52e31"
-    },
-    {
-      "name": "Auth0 Orange",
-      "value": "#eb5424"
-    },
-    {
-      "name": "Azure Blue",
-      "value": "#007fff"
-    },
-    {
-      "name": "C# Purple",
-      "value": "#68217A"
-    },
-    {
-      "name": "Gatsby Purple",
-      "value": "#639"
-    },
-    {
-      "name": "Go Cyan",
-      "value": "#5dc9e2"
-    },
-    {
-      "name": "Java Blue-Gray",
-      "value": "#557c9b"
-    },
-    {
-      "name": "JavaScript Yellow",
-      "value": "#f9e64f"
-    },
-    {
-      "name": "Mandalorian Blue",
-      "value": "#1857a4"
-    },
-    {
-      "name": "Node Green",
-      "value": "#215732"
-    },
-    {
-      "name": "React Blue",
-      "value": "#00b3e6"
-    },
-    {
-      "name": "Something Different",
-      "value": "#832561"
-    },
-    {
-      "name": "Vue Green",
-      "value": "#42b883"
-    }
-  ],
-  "prettier.requireConfig": true
+  "prettier.requireConfig": true,
+  "[rust]": {
+    "editor.defaultFormatter": "matklad.rust-analyzer"
+  },
+  "rust-analyzer.inlayHints.typeHints": false,
+  "search.exclude": {
+    "**/node_modules": false
+  },
+  "workbench.colorTheme": "One Dark Pro",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "editor.tabSize": 2
 }
