--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,7 +1,5 @@
 {
   "workbench.startupEditor": "none",
-  "editor.fontFamily": "Inconsolata, Consolas, 'Courier New', Courier",
-  "editor.lineHeight": 20,
   "editor.renderWhitespace": "boundary",
   "editor.multiCursorModifier": "alt",
   "editor.wordWrap": "on",
@@ -10,7 +8,8 @@
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
   "[markdown]": {
-    "files.trimTrailingWhitespace": false
+    "files.trimTrailingWhitespace": false,
+    "editor.defaultFormatter": "yzhang.markdown-all-in-one"
   },
   "files.associations": {
     "*.test.ts.snap": "javascript",
@@ -20,28 +19,22 @@
   "terminal.integrated.cursorStyle": "line",
   "terminal.integrated.confirmOnExit": true,
   "telemetry.enableTelemetry": false,
-  "diffEditor.ignoreTrimWhitespace": false,
   "debug.allowBreakpointsEverywhere": true,
   "window.titleBarStyle": "custom",
   "breadcrumbs.enabled": true,
-  "window.zoomLevel": 0,
   "git.autofetch": true,
   "workbench.statusBar.visible": true,
   "git.confirmSync": false,
   "editor.cursorSmoothCaretAnimation": true,
-  "terminal.integrated.rendererType": "canvas",
-  "terminal.integrated.shell.osx": "/usr/local/bin/fish",
-  "terminal.integrated.shell.linux": "fish",
   "terminal.integrated.shell.windows": "C:\\Program Files\\PowerShell\\7-preview\\pwsh.exe",
   "terminal.integrated.automationShell.windows": "C:\\Program Files\\PowerShell\\7-preview\\pwsh.exe",
-  "workbench.activityBar.visible": true,
   "markdown.preview.scrollEditorWithPreview": false,
   "editor.minimap.enabled": false,
   "[json]": {
-    "editor.defaultFormatter": "vscode.json-language-features"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[html]": {
-    "editor.defaultFormatter": "vscode.html-language-features"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
@@ -49,7 +42,6 @@
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "diffEditor.renderSideBySide": false,
   "editor.cursorSurroundingLines": 5,
   "scm.defaultViewMode": "tree",
   "[typescriptreact]": {
@@ -58,27 +50,76 @@
   "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "importCost.bundleSizeDecoration": "gzipped",
-  "importCost.mediumPackageColor": "#788ca1",
-  "importCost.smallPackageColor": "#6a737d",
   "editor.snippetSuggestions": "bottom",
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
   "extensions.ignoreRecommendations": false,
-  "workbench.sideBar.location": "left",
   "liveshare.featureSet": "insiders",
   "typescript.updateImportsOnFileMove.enabled": "always",
   "prettier.requireConfig": true,
   "[rust]": {
-    "editor.defaultFormatter": "matklad.rust-analyzer"
+    "editor.defaultFormatter": "rust-lang.rust-analyzer"
   },
-  "rust-analyzer.inlayHints.typeHints": false,
   "search.exclude": {
     "**/node_modules": false
   },
-  "workbench.colorTheme": "One Dark Pro",
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "editor.suggestSelection": "first",
+  "editor.fontFamily": "'Comic Code', Menlo, Monaco, 'Courier New', monospace",
+  "editor.lineHeight": 19,
+  "yaml.schemas": {
+    "file:///Users/tomsherman/.vscode/extensions/atlassian.atlascode-2.10.12/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
+  },
+  "atlascode.jira.enabled": true,
+  "atlascode.bitbucket.enabled": false,
+  "atlascode.jira.jqlList": [
+    {
+      "id": "0527c005-5d72-4368-99a2-333ffa967551",
+      "enabled": true,
+      "name": "My ovotech Issues",
+      "query": "assignee = currentUser() AND resolution = Unresolved ORDER BY lastViewed DESC",
+      "siteId": "3be88982-f9c1-48b3-9e95-8ed8275d1f50",
+      "monitor": true
+    }
+  ],
+  "redhat.telemetry.enabled": false,
+  "githubPullRequests.fileListLayout": "tree",
+  "workbench.sideBar.location": "right",
+  "terraform.languageServer": {
+    "external": true,
+    "pathToBinary": "",
+    "args": [
+      "serve"
+    ],
+    "maxNumberOfProblems": 100,
+    "trace.server": "off"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "jest.autoRun": "off",
+  "jest.enableCodeLens": false,
+  "workbench.colorTheme": "GitHub Light",
+  "editor.inlineSuggest.enabled": true,
+  "github.copilot.enable": {
+    "*": true,
+    "yaml": false,
+    "plaintext": true,
+    "markdown": false
+  },
+  "editor.bracketPairColorization.enabled": false,
+  "editor.guides.bracketPairs": "active",
+  "haskell.manageHLS": "PATH",
+  "prettier.useEditorConfig": false,
+  "xstate.nestTypegenFiles": false,
+  "explorer.fileNesting.patterns": {
+    "*.ts": "${capture}.js",
+    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+    "*.jsx": "${capture}.js",
+    "*.tsx": "${capture}.ts",
+    "tsconfig.json": "tsconfig.*.json",
+    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml"
+  },
+  "diffEditor.ignoreTrimWhitespace": false,
+  "zig.buildOnSave": true,
+  "window.commandCenter": true
 }
